Changed name mismatch in composer.json file.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cpliakas/git-php",
+    "name": "cpliakas/git-wrapper",
     "type": "library",
     "description": "A command line wrapper aroung Git.",
     "keywords": ["git"],
