--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,7 @@ php:
   - "5.3"
 
 before_script:
-  - composer install
+  - composer install --prefer-dist --dev
+
+after_script:
+  - php vendor/bin/coveralls -v
