Added --no-dev flag, see http://seld.be/notes/composer-installing-require-dev-by-default.

--- a/build.xml
+++ b/build.xml
@@ -48,6 +48,7 @@
     <exec executable="php">
       <arg value="${basedir}/build/composer.phar"/>
       <arg value="update"/>
+      <arg value="--no-dev"/>
     </exec>
   </target>
 
