Fixed #63: Pdepend now ignores the test files.

--- a/build.xml
+++ b/build.xml
@@ -32,7 +32,7 @@
       <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml" />
       <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg" />
       <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg" />
-      <arg value="--ignore=src/GitWrapper/Test" />
+      <arg value="--ignore=${basedir}/src/GitWrapper/Test" />
       <arg path="${basedir}/src" />
     </exec>
   </target>
