--- a/build.xml
+++ b/build.xml
@@ -4,37 +4,20 @@
   <target name="build" depends="phploc,pdepend,composer,phpunit"/>
 
   <target name="clean" description="Cleanup build artifacts">
+    <delete file="${basedir}/composer.lock"/>
     <delete file="${basedir}/build/composer.phar"/>
     <delete dir="${basedir}/build/coverage"/>
     <delete dir="${basedir}/build/logs"/>
     <delete dir="${basedir}/build/pdepend"/>
     <delete dir="${basedir}/build/test"/>
-    <delete file="${basedir}/composer.lock"/>
     <delete dir="${basedir}/vendor"/>
   </target>
 
   <target name="prepare">
+    <mkdir dir="${basedir}/build/coverage"/>
     <mkdir dir="${basedir}/build/logs"/>
-  </target>
-
-  <target name="phploc" depends="prepare" description="Measure project size using PHPLOC">
-    <exec executable="phploc">
-      <arg value="--log-csv=${basedir}/build/logs/phploc.csv" />
-      <arg value="--exclude=src/GitWrapper/Test" />
-      <arg value="--quiet" />
-      <arg path="${basedir}/src" />
-    </exec>
-  </target>
-
-  <target name="pdepend" depends="prepare" description="Calculate software metrics using PHP_Depend">
     <mkdir dir="${basedir}/build/pdepend"/>
-    <exec executable="pdepend">
-      <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml" />
-      <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg" />
-      <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg" />
-      <arg value="--ignore=${basedir}/src/GitWrapper/Test" />
-      <arg path="${basedir}/src" />
-    </exec>
+    <mkdir dir="${basedir}/build/test"/>
   </target>
 
   <target name="composer-check" depends="prepare">
@@ -52,10 +35,30 @@
     </exec>
   </target>
 
+  <target name="phploc" depends="composer" description="Measure project size using PHPLOC">
+    <exec executable="${basedir}/vendor/bin/phploc">
+      <arg value="--log-csv=${basedir}/build/logs/phploc.csv" />
+      <arg value="--exclude=${basedir}/src/GitWrapper/Test" />
+      <arg value="--quiet" />
+      <arg path="${basedir}/src" />
+    </exec>
+  </target>
+
+  <target name="pdepend" depends="prepare" description="Calculate software metrics using PHP_Depend">
+    <mkdir dir="${basedir}/build/pdepend"/>
+    <exec executable="${basedir}/vendor/bin/pdepend">
+      <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml" />
+      <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg" />
+      <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg" />
+      <arg value="--ignore=${basedir}/src/GitWrapper/Test" />
+      <arg path="${basedir}/src" />
+    </exec>
+  </target>
+
   <target name="phpunit" depends="composer" description="Run unit tests with PHPUnit">
     <mkdir dir="${basedir}/build/test"/>
     <mkdir dir="${basedir}/build/coverage"/>
-    <exec executable="phpunit" failonerror="true"/>
+    <exec executable="${basedir}/vendor/bin/phpunit" failonerror="true"/>
     <delete dir="${basedir}/build/test"/>
   </target>
 
