--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "symfony/event-dispatcher": "~2.0"
     },
     "require-dev": {
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "dev-master",
+        "pdepend/pdepend": "~1.0",
+        "phploc/phploc": "~2.0",
+        "phpunit/phpunit": "~3.0"
     },
     "autoload": {
         "psr-0": {
