--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,12 @@
         "symfony/event-dispatcher": "~2.0"
     },
     "require-dev": {
-        "satooshi/php-coveralls": "dev-master",
         "pdepend/pdepend": "~1.0",
         "phploc/phploc": "~2.0",
-        "phpunit/phpunit": "~3.0"
+        "phpmd/phpmd": "~1.0",
+        "phpunit/phpunit": "~3.0",
+        "satooshi/php-coveralls": "*",
+        "sebastian/phpcpd": "~2.0"
     },
     "autoload": {
         "psr-0": {
