--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ before_script:
 
 after_script:
   - php vendor/bin/coveralls -v
+  - vendor/bin/ocular code-coverage:upload --format=php-clover build/logs/clover.xml
+
