--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "pdepend/pdepend": "~1.0",
         "phploc/phploc": "~2.0",
         "phpmd/phpmd": "~1.0",
-        "phpunit/phpunit": "~3.0",
+        "phpunit/phpunit": "~4.0|~5.0",
         "psr/log": "~1.0",
         "scrutinizer/ocular": "~1.0",
         "sebastian/phpcpd": "~2.0",
