--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,39 @@
 {
-    "name": "cpliakas/git-wrapper",
-    "type": "library",
-    "description": "A PHP wrapper around the Git command line utility.",
-    "keywords": ["git"],
-    "homepage": "https://github.com/cpliakas/git-wrapper",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Chris Pliakas",
-            "email": "opensource@chrispliakas.com"
-        }
-    ],
-    "require": {
-        "php": ">=5.3.0",
-        "symfony/process": "~2.3|~3.0",
-        "symfony/event-dispatcher": "~2.3|~3.0"
-    },
-    "require-dev": {
-        "pdepend/pdepend": "~1.0",
-        "phploc/phploc": "~2.0",
-        "phpmd/phpmd": "~1.0",
-        "phpunit/phpunit": "~4.0|~5.0",
-        "psr/log": "~1.0",
-        "scrutinizer/ocular": "~1.0",
-        "sebastian/phpcpd": "~2.0",
-        "symfony/filesystem": "~2.0"
-    },
-    "suggest": {
-        "monolog/monolog": "Enables logging of executed git commands"
-    },
-    "autoload": {
-        "psr-0": {
-            "GitWrapper": "src/"
-        }
+  "name": "craftpip/git-wrapper",
+  "type": "library",
+  "description": "A PHP wrapper around the Git command line utility.",
+  "keywords": [
+    "git"
+  ],
+  "homepage": "https://github.com/craftpip/git-wrapper",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Chris Pliakas",
+      "email": "opensource@chrispliakas.com"
     }
+  ],
+  "require": {
+    "php": ">=5.3.0",
+    "symfony/process": "~2.3|~3.0",
+    "symfony/event-dispatcher": "~2.3|~3.0"
+  },
+  "require-dev": {
+    "pdepend/pdepend": "~1.0",
+    "phploc/phploc": "~2.0",
+    "phpmd/phpmd": "~1.0",
+    "phpunit/phpunit": "~4.0|~5.0",
+    "psr/log": "~1.0",
+    "scrutinizer/ocular": "~1.0",
+    "sebastian/phpcpd": "~2.0",
+    "symfony/filesystem": "~2.0"
+  },
+  "suggest": {
+    "monolog/monolog": "Enables logging of executed git commands"
+  },
+  "autoload": {
+    "psr-0": {
+      "GitWrapper": "src/"
+    }
+  }
 }
