--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ php:
   - 7.1
   - 7.0
   
+matrix:
+  allow_failures:
+    - php: 7.2
+
 before_script:
   - git --version
   - composer install --prefer-dist
