--- a/composer.json
+++ b/composer.json
@@ -12,26 +12,28 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "symfony/process": "~2.3|~3.0",
-        "symfony/event-dispatcher": "~2.3|~3.0"
+        "php": "^7.0",
+        "symfony/process": "^3.0|^4.0",
+        "symfony/event-dispatcher": "^3.0|^4.0"
     },
     "require-dev": {
-        "pdepend/pdepend": "~1.0",
-        "phploc/phploc": "~2.0",
-        "phpmd/phpmd": "~1.0",
-        "phpunit/phpunit": "~4.0|~5.0",
-        "psr/log": "~1.0",
-        "scrutinizer/ocular": "~1.0",
-        "sebastian/phpcpd": "~2.0",
-        "symfony/filesystem": "~2.0"
+        "pdepend/pdepend": "^1.0",
+        "phpmd/phpmd": "^2.6",
+        "phpunit/phpunit": "^6.4",
+        "psr/log": "^1.0",
+        "symfony/filesystem": "^3.0|^4.0"
     },
     "suggest": {
         "monolog/monolog": "Enables logging of executed git commands"
     },
     "autoload": {
-        "psr-0": {
-            "GitWrapper": "src/"
+        "psr-4": {
+            "GitWrapper\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "GitWrapper\\Tests\\": "tests"
         }
     }
 }
