--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "symfony/process": "~2.3|~3.0",
-        "symfony/event-dispatcher": "~2.3|~3.0"
+        "symfony/process": "~2.3|~3.0|~4.0",
+        "symfony/event-dispatcher": "~2.3|~3.0|~4.0"
     },
     "require-dev": {
         "pdepend/pdepend": "~1.0",
@@ -24,7 +24,7 @@
         "psr/log": "~1.0",
         "scrutinizer/ocular": "~1.0",
         "sebastian/phpcpd": "~2.0",
-        "symfony/filesystem": "~2.0"
+        "symfony/filesystem": "~2.0|~3.0|~4.0"
     },
     "suggest": {
         "monolog/monolog": "Enables logging of executed git commands"
