--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "symfony/process": "^3.0|^4.0",
-        "symfony/event-dispatcher": "^3.0|^4.0"
+        "php": "^7.1.3",
+        "symfony/process": "^4.0",
+        "symfony/event-dispatcher": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4",
-        "symfony/filesystem": "^3.0|^4.0",
+        "symfony/filesystem": "^4.0",
         "psr/log": "1.0"
     },
     "suggest": {
