--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,6 @@ after_script:
   # upload coverage
   - wget https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar
   - php coveralls.phar --verbose
+
+notifications:
+  email: never
