--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     "require-dev": {
         "phpunit/phpunit": "^6.5",
         "symfony/filesystem": "^4.0",
-        "psr/log": "1.0"
+        "psr/log": "1.0",
+        "symplify/easy-coding-standard": "^3.0",
+        "slam/php-cs-fixer-extensions": "^1.10"
     },
     "suggest": {
         "monolog/monolog": "Enables logging of executed git commands"
