--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,11 @@ matrix:
       env: PHPUNIT_FLAGS="--coverage-clover coverage.xml"
     - php: 7.2
 
+install:
+  - composer install --prefer-dist
+
 before_script:
   - git --version
-  - composer install --prefer-dist
 
 script:
   - vendor/bin/phpunit $PHPUNIT_FLAGS
