--- a/easy-coding-standard.neon
+++ b/easy-coding-standard.neon
@@ -32,7 +32,7 @@ parameters:
 
     skip:
         SlevomatCodingStandard\Sniffs\TypeHints\TypeHintDeclarationSniff:
-            - tests/GitWrapper/Test/TestLogger.php
+            - tests/TestLogger.php
 
         SlamCsFixer\FinalInternalClassFixer:
             # class with children
