--- a/easy-coding-standard.neon
+++ b/easy-coding-standard.neon
@@ -3,18 +3,9 @@ includes:
     - vendor/symplify/easy-coding-standard/config/php71.neon
     - vendor/symplify/easy-coding-standard/config/common.neon
     - vendor/symplify/easy-coding-standard/config/clean-code.neon
+    - vendor/symplify/easy-coding-standard/config/symplify.neon
 
 checkers:
-    - SlevomatCodingStandard\Sniffs\Classes\UnusedPrivateElementsSniff
-
-    # Symplify set
-    - Symplify\CodingStandard\Fixer\Naming\PropertyNameMatchingTypeFixer
-    - Symplify\CodingStandard\Sniffs\Naming\AbstractClassNameSniff
-    - Symplify\CodingStandard\Fixer\ArrayNotation\StandaloneLineInMultilineArrayFixer
-    - Symplify\CodingStandard\Fixer\Import\ImportNamespacedNameFixer
-    - Symplify\CodingStandard\Fixer\Naming\PropertyNameMatchingTypeFixer
-    - Symplify\CodingStandard\Fixer\Php\ClassStringToClassConstantFixer
-
     # Metrics
     PHP_CodeSniffer\Standards\Generic\Sniffs\Files\LineLengthSniff:
         absoluteLineLimit: 120
@@ -23,12 +14,11 @@ checkers:
     PHP_CodeSniffer\Standards\Generic\Sniffs\Metrics\NestingLevelSniff:
         absoluteNestingLevel: 4
 
-    # Class should be Final or Abstract
-    - SlamCsFixer\FinalInternalClassFixer
-
 parameters:
     exclude_checkers:
         - PHP_CodeSniffer\Standards\Generic\Sniffs\CodeAnalysis\AssignmentInConditionSniff
+        - Symplify\CodingStandard\Sniffs\Architecture\ExplicitExceptionSniff
+        - Symplify\CodingStandard\Sniffs\DependencyInjection\NoClassInstantiationSniff
 
     skip:
         SlevomatCodingStandard\Sniffs\TypeHints\TypeHintDeclarationSniff:
