--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: php
 matrix:
   include:
     - php: 7.1
+      env: COMPOSER_FLAGS=--prefer-lowest
+    - php: 7.1
       env: CODING_STANDARD=true
     - php: 7.1
       env: PHPSTAN=true
@@ -11,7 +13,7 @@ matrix:
     - php: 7.2
 
 install:
-  - composer install --prefer-dist
+  - composer update --prefer-dist $COMPOSER_FLAGS
 
 before_script:
   - git --version
