--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,3 @@
 parameters:
     ignoreErrors:
-        - '#Call to an undefined method GitWrapper\\Event\\GitEvent::getName\(\)#'
+        - '#Access to an undefined property object::\$data#'
