--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,5 @@
 parameters:
     ignoreErrors:
         - '#Access to an undefined property object::\$data#'
+        # false positive, is array callable
+        - '#Parameter \#1 \$function of function call_user_func_array expects callable, array<int, \$this\(GitWrapper\\Test\\GitWorkingCopyTest\)\|int\|string> given#'
