--- a/composer.json
+++ b/composer.json
@@ -4,25 +4,21 @@
     "keywords": ["git", "git wrapper", "cli"],
     "license": "MIT",
     "authors": [
-        {
-            "name": "Chris Pliakas",
-            "email": "opensource@chrispliakas.com"
-        }
+        { "name": "Chris Pliakas", "email": "opensource@chrispliakas.com" }
     ],
     "require": {
         "php": "^7.1.3",
-        "symfony/process": "^4.0",
-        "symfony/event-dispatcher": "^4.0"
+        "symfony/process": "^4.1",
+        "symfony/event-dispatcher": "^4.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.2",
-        "symfony/filesystem": "^4.0",
+        "symfony/filesystem": "^4.1",
         "psr/log": "1.0",
-        "symplify/easy-coding-standard": "^4.5",
-        "slam/php-cs-fixer-extensions": "^1.16",
+        "symplify/easy-coding-standard": "^5.1",
         "nette/utils": "^2.5",
-        "phpstan/phpstan": "^0.10.1",
-        "symplify/changelog-linker": "^4.5"
+        "phpstan/phpstan": "^0.10.5",
+        "symplify/changelog-linker": "^5.1"
     },
     "autoload": {
         "psr-4": {
