--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ matrix:
     - php: 7.1
       env: PHPUNIT_FLAGS="--coverage-clover coverage.xml"
     - php: 7.2
+    - php: 7.3
+    - php: nightly
 
 install:
   - composer update $COMPOSER_FLAGS
