--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,14 @@ language: php
 
 matrix:
   include:
-    - php: 7.1
+    - php: '7.1'
       env: COMPOSER_FLAGS=--prefer-lowest
-    - php: 7.1
+    - php: '7.1'
       env: STATIC_ANALYSIS=true
-    - php: 7.1
+    - php: '7.1'
       env: PHPUNIT_FLAGS="--coverage-clover coverage.xml"
-    - php: 7.2
-    - php: 7.3
-      env: COMPOSER_FLAGS=--ignore-platform-reqs
-    - php: nightly
-      env: COMPOSER_FLAGS=--ignore-platform-reqs
+    - php: '7.2'
+    - php: '7.3'
 
 install:
   - composer update $COMPOSER_FLAGS
