--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "symfony/process": "^4.1",
-        "symfony/event-dispatcher": "^4.1",
-        "composer/semver": "^1.5"
+        "symfony/event-dispatcher": "^4.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.4",
