--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
       env: PHPUNIT_FLAGS="--coverage-clover coverage.xml"
     - php: '7.2'
     - php: '7.3'
+    - php: '7.4snapshot'
 
 install:
   - composer update $COMPOSER_FLAGS
