--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,19 @@
         { "name": "Tomas Votruba", "email": "tomas.vot@gmail.com" }
     ],
     "require": {
-        "php": "^7.1.3",
-        "symfony/process": "^4.1",
-        "symfony/event-dispatcher": "^4.1"
+        "php": "^7.1",
+        "symfony/process": "^4.3|^5.0",
+        "symfony/event-dispatcher": "^4.3|^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.4",
-        "symfony/filesystem": "^4.1",
-        "psr/log": "1.0",
-        "symplify/easy-coding-standard": "^5.4",
+        "phpunit/phpunit": "^7.5|^8.4",
+        "symfony/filesystem": "^4.3|^5.0",
+        "psr/log": "^1.1",
+        "symplify/easy-coding-standard": "^6.1",
         "nette/utils": "^2.5",
         "phpstan/phpstan": "^0.11",
-        "symplify/changelog-linker": "^5.4"
+        "symplify/changelog-linker": "^6.1",
+        "symplify/phpstan-extensions": "^6.1"
     },
     "autoload": {
         "psr-4": {
@@ -37,7 +38,7 @@
     "scripts": {
         "check-cs": "vendor/bin/ecs check src tests",
         "fix-cs": "vendor/bin/ecs check src tests --fix",
-        "phpstan": "vendor/bin/phpstan analyse src tests --level max",
+        "phpstan": "vendor/bin/phpstan analyse src tests --error-format symplify",
         "changelog": "vendor/bin/changelog-linker dump-merges --in-categories"
     }
 }
