--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,10 @@
+includes:
+    - vendor/symplify/phpstan-extensions/config/config.neon
+
 parameters:
+    level: max
+    reportUnmatchedIgnoredErrors: false
+
     ignoreErrors:
         - '#Access to an undefined property object::\$data#'
         # false positive - ignored doc type
