--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,3 +10,5 @@ parameters:
         # false positive - ignored doc type
         - '#Parameter \#1 \$path of function basename expects string, string\|false given#'
         - '#should be compatible with return type \(null\) of method Psr\\Log\\Logger(.*?)Interface::(.*?)\(\)#'
+
+        - '#Unreachable statement \- code above always terminates#'
