--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "nette/utils": "^3.0",
         "phpstan/phpstan": "^0.11.19",
         "symplify/changelog-linker": "^6.1",
-        "symplify/phpstan-extensions": "^6.1"
+        "symplify/phpstan-extensions": "^6.1",
+        "rector/rector": "^0.5.21"
     },
     "autoload": {
         "psr-4": {
