--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "phpstan/phpstan": "^0.11.19",
         "symplify/changelog-linker": "^6.1",
         "symplify/phpstan-extensions": "^6.1",
-        "rector/rector": "^0.5.21"
+        "rector/rector": "^0.5.21",
+        "tracy/tracy": "^2.7"
     },
     "autoload": {
         "psr-4": {
