--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "symfony/event-dispatcher": "^4.3|^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5|^8.4",
+        "phpunit/phpunit": "^8.4",
         "symfony/filesystem": "^4.3|^5.0",
         "psr/log": "^1.1",
         "symplify/easy-coding-standard": "^6.1",
