upgrade instantly to PHPUnit 80

--- a/rector-ci.yaml
+++ b/rector-ci.yaml
@@ -2,4 +2,5 @@ parameters:
     sets:
         - 'dead-code'
         - 'code-quality'
-        - 'coding-style'
+        - 'phpunit80'
+#        - 'coding-style'
