--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "symplify/changelog-linker": "^6.1",
         "symplify/phpstan-extensions": "^6.1",
         "rector/rector": "^0.5.21",
-        "tracy/tracy": "^2.7"
+        "tracy/tracy": "^2.7",
+        "phpstan/phpstan-phpunit": "^0.11.2"
     },
     "autoload": {
         "psr-4": {
