--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "phpstan/phpstan": "^0.11.19",
         "symplify/changelog-linker": "^6.1",
         "symplify/phpstan-extensions": "^6.1",
-        "rector/rector": "^0.5.21",
+        "rector/rector": "dev-master",
         "tracy/tracy": "^2.7",
         "phpstan/phpstan-phpunit": "^0.11.2"
     },
