--- a/rector-ci.yaml
+++ b/rector-ci.yaml
@@ -3,6 +3,8 @@ parameters:
         - 'dead-code'
         - 'code-quality'
         - 'coding-style'
+        - 'nette-utils-code-quality' # needs fixing adding imports
 
         # upgrades
         - 'phpunit80'
+        - 'php70'
