--- a/phpstan.neon
+++ b/phpstan.neon
@@ -14,3 +14,11 @@ parameters:
 
         - '#Unreachable statement \- code above always terminates#'
         - '#Parameter \#2 \$haystack of method PHPUnit\\Framework\\Assert\:\:assertStringContainsString\(\) expects string, string\|false given#'
+
+        - '#no value type specified in iterable type#'
+        - '#TValue#'
+
+        - '#Method GitWrapper\\GitWrapper\:\:getEnvVar\(\) has no return typehint specified#'
+        - '#Method GitWrapper\\GitWrapper\:\:setEnvVar\(\) has parameter \$value with no typehint specified#'
+        - '#Method GitWrapper\\GitCommand\:\:getOption\(\) has parameter \$default with no typehint specified#'
+        - '#Method GitWrapper\\GitCommand\:\:getOption\(\) has no return typehint specified#'
