--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "phpstan/phpstan": "^0.12.3",
         "symplify/changelog-linker": "^7.1",
         "symplify/phpstan-extensions": "^7.1",
-        "rector/rector": "^0.6.2",
+        "rector/rector": "^0.6.7",
         "tracy/tracy": "^2.7",
         "phpstan/phpstan-phpunit": "^0.12.3"
     },
@@ -43,5 +43,7 @@
         "fix-cs": "vendor/bin/ecs check src tests --fix --ansi",
         "phpstan": "vendor/bin/phpstan analyse src tests --error-format symplify --ansi",
         "changelog": "vendor/bin/changelog-linker dump-merges --in-categories --ansi"
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
