move Travis to Github Actions

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "check-cs": "vendor/bin/ecs check src tests --ansi",
         "fix-cs": "vendor/bin/ecs check src tests --fix --ansi",
         "phpstan": "vendor/bin/phpstan analyse src tests --error-format symplify --ansi",
-        "changelog": "vendor/bin/changelog-linker dump-merges --in-categories --ansi"
+        "changelog": "vendor/bin/changelog-linker dump-merges --in-categories --ansi",
+        "rector": "vendor/bin/rector process src tests --config rector-ci.yaml --dry-run"
     }
 }
