--- a/phpstan.neon
+++ b/phpstan.neon
@@ -22,3 +22,4 @@ parameters:
         - '#Method GitWrapper\\GitWrapper\:\:setEnvVar\(\) has parameter \$value with no typehint specified#'
         - '#Method GitWrapper\\GitCommand\:\:getOption\(\) has parameter \$default with no typehint specified#'
         - '#Method GitWrapper\\GitCommand\:\:getOption\(\) has no return typehint specified#'
+        - '#Method (.*?) returns bool type, so the name should start with is/has/was#'
