--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -1,80 +1,47 @@
 name: Code_Checks
 
 on:
-    - pull_request
+    pull_request: null
+    push:
+        branches:
+            - master
 
 jobs:
     ecs:
         runs-on: ubuntu-latest
 
         steps:
-            -
-                name: Checkout code
-                uses: actions/checkout@v2
-
-            -
-                name: Setup PHP
-                uses: shivammathur/setup-php@v1
+            -   uses: actions/checkout@v2
+            -   uses: shivammathur/setup-php@v1
                 with:
                     php-version: 7.3
                     coverage: none
 
-            -
-                name: Install
-                run:
-                    composer install --no-progress
-
-            -
-                name: Run
-                run:
-                    composer check-cs
+            -   run: composer install --no-progress
+            -   run: composer check-cs
 
     phpstan:
         runs-on: ubuntu-latest
 
         steps:
-            -
-                name: Checkout code
-                uses: actions/checkout@v2
-
-            -
-                name: Setup PHP
-                uses: shivammathur/setup-php@v1
+            -   uses: actions/checkout@v2
+            -   uses: shivammathur/setup-php@v1
                 with:
                     php-version: 7.3
                     coverage: none
 
-            -
-                name: Install
-                run:
-                    composer install --no-progress
-
-            -
-                name: Run
-                run:
-                    composer phpstan
+            -   run: composer install --no-progress
+            -   run: composer phpstan
 
     rector:
         runs-on: ubuntu-latest
 
         steps:
-            -
-                name: Checkout code
-                uses: actions/checkout@v2
-
-            -
-                name: Setup PHP
-                uses: shivammathur/setup-php@v1
+            -   uses: actions/checkout@v2
+            -   uses: shivammathur/setup-php@v1
                 with:
                     php-version: 7.3
                     coverage: none
 
-            -
-                name: Install
-                run:
-                    composer install --no-progress
-
-            -
-                name: Run
-                run:
-                    composer rector
+            -   run: composer install --no-progress
+            -   run: composer rector
