--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -1,3 +1,4 @@
+# inspired at https://github.com/Symplify/Symplify/blob/master/.github/workflows/code_checks.yaml
 name: Code_Checks
 
 on:
@@ -26,6 +27,21 @@ jobs:
                     coverage: none
 
             -   run: composer install --no-progress
+            -   run: vendor/bin/phpunit
+
+    test_lowest_dependencies:
+        runs-on: ubuntu-latest
+        steps:
+            -   uses: actions/checkout@v2
+            -   run: git fetch --depth=100000 origin
+
+            # see https://github.com/shivammathur/setup-php
+            -   uses: shivammathur/setup-php@v1
+                with:
+                    php-version: 7.2
+                    coverage: none
+
+            -   run: composer update --no-progress --prefer-lowest
             -   run: vendor/bin/phpunit
 
     ecs:
